# riksdagen_sentences

./: README.md  STATISTICS.md  analyze.py  analyzer.py  api.py  config.py  extract_departementserien.py  extract_propositioner.py  main.py  pyproject.toml  riksdagen_analyzer.py
config/: collections.yml  datasets.yml  languages.yml  lexical_categories.yml  licenses.yml  named_entity_recognition_labels.yml  providers.yml  type.yml
deprecated/: RiksdagenJsonl.py
diagrams/: datamodel.puml
models/: RiksdagenJsonl.py  analyzer.py  database_handler.py  dataset.py  dataset_handler.py  datasets.py  document.py  entities.py  entity.py  exceptions.py  riksdagen_analyzer.py  riksdagen_document.py  sentence.py  token.py
sql/: all_entities_found_in_document_id_55.sql  all_sentences_with_entities.sql  all_swedish_rawtokens.sql  all_swedish_rawtokens_and_normtokens_with_score_above_0.7.sql  all_swedish_rawtokens_and_sentences.sql  all_swedish_rawtokens_with_score_above_0.7.sql  all_swedish_sentences.sql  all_swedish_sentences_that_match_a_string_case_insensitive.sql  all_swedish_sentences_with_entities.sql  all_swedish_sentences_with_entities_count.sql  all_unique_entities_per_document.sql  average_of_entities_for_swedish_sentences_with_at_least_one_entity.sql  count_all_rows_in_rawtoken_sentence_linking.sql  count_entities_in_sv_sentences.sql  count_entities_in_sv_sentences_group_by_label.sql  count_language_id_mismatches.sql  count_sv_rawtoken_links_by_category.sql  count_sv_rawtoken_sentence_links.sql  count_sv_rawtokens.sql  count_sv_rawtokens_with_score_above_0.7.sql  (+9 more)
(+16 files in other folders)
