[tool.poetry]
name = "riksdagen_sentences"
version = "0.1.0"
description = "Project that aims to sentenize all the open data of Riksdagen to create an easily linkable dataset of sentences that can be refered to from Wikidata lexemes and other resources"
authors = ["Dennis Priskorn"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
stop-words = "^2018.7.23"
wordcloud = "^1.9.2"
matplotlib = "^3.8.2"
uuid = "^1.30"
pydantic = "^2.5.1"
tqdm = "^4.66.1"
jsonlines = "^4.0.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
fasttext-langdetect = { git = "https://github.com/dpriskorn/fasttext-langdetect.git", branch = "main"}
dask = "^2023.11.0"
spacy-entity-linker = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
